etc/tests/error/parser/match-recovery-extra-paren.ny
;; expect: expected '->' or block after case patterns
use std.core

fn main() { 0 match}
mavvvvvvvv)
vvvvvvvvvvvvvvvvvvinvv
